# Go/APG1_Golang_Boot_camp/APG1_Golang_Boot_camp/Go_Day06/src/ex01/docs/swagger.json
@@ -121,43 +121,6 @@
                         }
                     }
                 }
-            },
-            "post": {
-                "description": "Login to the admin panel",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "text/html"
-                ],
-                "tags": [
-                    "admin"
-                ],
-                "summary": "Login to admin panel",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Admin Username",
-                        "name": "username",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Admin Password",
-                        "name": "password",
-                        "in": "formData",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "302": {
-                        "description": "Redirect to admin panel",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
             }
         },
         "/post/{id}": {
