# Go/APG1_Golang_Boot_camp/APG1_Golang_Boot_camp/Go_Day06/src/ex01/main.go
@@ -12,6 +12,7 @@ import (
 	"strings"
 	"time"
 
+	"github.com/golang-jwt/jwt/v4"
 	"github.com/julienschmidt/httprouter"
 	_ "github.com/lib/pq"
 	"github.com/russross/blackfriday/v2"
@@ -31,6 +32,7 @@ var (
 	db            *sql.DB
 	adminUsername string
 	adminPassword string
+	serviceSecret string
 )
 
 type Article struct {
@@ -62,8 +64,8 @@ func init() {
 	defer file.Close()
 
 	var dbUser, dbPassword, dbName, db_scripts string
-	_, err = fmt.Fscanf(file, "admin_username: %s\nadmin_password: %s\ndb_user: %s\ndb_password: %s\ndb_name: %s\n",
-		&adminUsername, &adminPassword, &dbUser, &dbPassword, &dbName)
+	_, err = fmt.Fscanf(file, "admin_username: %s\nadmin_password: %s\nservice_secret: %s\ndb_user: %s\ndb_password: %s\ndb_name: %s\n",
+		&adminUsername, &adminPassword, &serviceSecret, &dbUser, &dbPassword, &dbName)
 	if err != nil {
 		log.Fatal("Error reading admin credentials:", err)
 	}
@@ -80,11 +82,11 @@ func init() {
 		log.Fatal("Error pinging the database:", err)
 	}
 
-	f, err := io.ReadAll(file)
+	all, err := io.ReadAll(file)
 	if err != nil {
 		log.Fatal("Error reading admin credentials:", err)
 	}
-	db_scripts = string(f)
+	db_scripts = string(all)
 
 	db_scripts = strings.SplitAfter(db_scripts, "-- SQL scripts")[1]
 
@@ -100,8 +102,8 @@ func main() {
 	router := httprouter.New()
 	router.GET("/", Index)
 	router.GET("/post/:id", ViewPost)
-	router.GET("/admin", Admin)
-	router.POST("/admin", AdminPost)
+	router.GET("/admin", GetUser(Admin))
+	router.POST("/admin", GetUser(AdminPost))
 	router.GET("/login", Login)
 	router.POST("/login", LoginPost)
 	router.Handler("GET", "/swagger/*any", httpSwagger.WrapHandler)
@@ -109,8 +111,49 @@ func main() {
 	router.ServeFiles("/images/*filepath", http.Dir("images"))
 	router.ServeFiles("/js/*filepath", http.Dir("js"))
 
+	// Wrap the router with middleware
+	wrappedRouter := applyMiddleware(router, GetUser)
+
+
 	log.Println("Server started on port 8888")
-	log.Fatal(http.ListenAndServe(":8888", router))
+	log.Fatal(http.ListenAndServe(":8888", wrappedRouter))
+}
+
+// Middleware application function
+func applyMiddleware(router *httprouter.Router, middleware func(http.Handler) http.Handler) http.Handler {
+    return middleware(router)
+}
+
+// Middleware function to check the JWT token
+func GetUser(next httprouter.Handle) httprouter.Handle {
+	return func(w http.ResponseWriter, r *http.Request, p httprouter.Params) {
+		cookie, err := r.Cookie("token")
+		if err != nil {
+			http.Error(w, "Forbidden", http.StatusForbidden)
+			return
+		}
+
+		tokenString := cookie.Value
+		token, err := jwt.Parse(tokenString, func(token *jwt.Token) (interface{}, error) {
+			if _, ok := token.Method.(*jwt.SigningMethodHMAC); !ok {
+				return nil, fmt.Errorf("unexpected signing method: %v", token.Header["alg"])
+			}
+			return serviceSecret, nil
+		})
+
+		if err != nil {
+			http.Error(w, "Forbidden", http.StatusForbidden)
+			return
+		}
+
+		if claims, ok := token.Claims.(jwt.MapClaims); ok && token.Valid {
+			// Add claims to request context if needed
+			r.Header.Set("username", claims["username"].(string))
+			next(w, r, p)
+		} else {
+			http.Error(w, "Forbidden", http.StatusForbidden)
+		}
+	}
 }
 
 // Index godoc
@@ -123,6 +166,7 @@ func main() {
 // @Success 200 {string} string "Homepage HTML"
 // @Router / [get]
 func Index(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
+	username := r.Header.Get("username")
 	page := r.URL.Query().Get("page")
 	pageNum, err := strconv.Atoi(page)
 	if err != nil || pageNum < 1 {
@@ -156,6 +200,7 @@ func Index(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
 	templates.ExecuteTemplate(w, "index.html", map[string]interface{}{
 		"Articles": articles,
 		"Page":     pageNum,
+		"IsAdmin":  username != adminUsername,
 	})
 }
 
@@ -185,7 +230,10 @@ func ViewPost(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
 
 	article.Content = string(blackfriday.Run([]byte(article.Content)))
 
-	templates.ExecuteTemplate(w, "post.html", article)
+	templates.ExecuteTemplate(w, "post.html", map[string]interface{}{
+		"Article": article,
+		"IsAdmin": r.Header.Get("username") != adminUsername,
+	})
 }
 
 // Admin godoc
@@ -197,7 +245,11 @@ func ViewPost(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
 // @Success 200 {string} string "Admin Panel HTML"
 // @Router /admin [get]
 func Admin(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
-	templates.ExecuteTemplate(w, "admin.html", nil)
+	templates.ExecuteTemplate(w, "admin.html",
+		map[string]interface{}{
+			"IsAdmin": r.Header.Get("username") != adminUsername,
+		},
+	)
 }
 
 // AdminPost godoc
@@ -233,6 +285,11 @@ func AdminPost(w http.ResponseWriter, r *http.Request, p httprouter.Params) {
 // @Success 200 {string} string "Login Page HTML"
 // @Router /login [get]
 func Login(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
+	if r.Header.Get("username") != "" {
+		http.Redirect(w, r, "/", http.StatusFound)
+		return
+	}
+
 	templates.ExecuteTemplate(w, "login.html", nil)
 }
 
@@ -246,14 +303,52 @@ func Login(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
 // @Param password formData string true "Admin Password"
 // @Success 302 {string} string "Redirect to admin panel"
 // @Router /login [post]
+
 func LoginPost(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
 	r.ParseForm()
 	username := r.FormValue("username")
 	password := r.FormValue("password")
 
-	if username == adminUsername && password == adminPassword {
-		http.Redirect(w, r, "/admin", http.StatusFound)
-	} else {
-		http.Redirect(w, r, "/login", http.StatusFound)
+	token := jwt.NewWithClaims(jwt.SigningMethodHS256, jwt.MapClaims{
+		"username": username,
+		"exp":      time.Now().Add(time.Hour * 1).Unix(),
+	})
+
+	tokenString, err := token.SignedString(serviceSecret)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
 	}
+
+	http.SetCookie(w, &http.Cookie{
+		Name:     "token",
+		Value:    tokenString,
+		Expires:  time.Now().Add(time.Hour * 1),
+		HttpOnly: true,
+	})
+
+	if username == adminUsername && password == adminPassword {
+		http.Redirect(w, r, "/", http.StatusFound)
+	} else {
+		http.Redirect(w, r, "/", http.StatusFound)
+	}
+}
+
+// Logout godoc
+// @Summary Logout
+// @Description Logout and clear the JWT token
+// @Tags admin
+// @Accept  */*
+// @Produce  */*
+// @Success 200 {string} string "Redirect to homepage"
+// @Router /logout [post]
+func Logout(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
+	http.SetCookie(w, &http.Cookie{
+		Name:     "token",
+		Value:    "",
+		MaxAge:   -1,
+		Path:     "/",
+		HttpOnly: true,
+	})
+	http.Redirect(w, r, "/", http.StatusFound)
 }
